--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "author": "Sivadass N",
   "license": "MIT",
   "dependencies": {
+    "formik": "^1.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "autoprefixer": "^8.6.2",
