--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Sivadass N",
   "license": "MIT",
   "dependencies": {
+    "connected-react-router": "^4.5.0",
     "formik": "^1.3.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -36,6 +37,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "gh-pages": "^2.0.0",
     "html-webpack-inline-svg-plugin": "^1.2.4",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
