--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "dependencies": {
     "connected-react-router": "^4.5.0",
     "formik": "^1.3.0",
+    "history": "^4.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.0.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2",
     "yup": "^0.26.6"
   },
   "devDependencies": {
