--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "connected-react-router": "^4.5.0",
     "formik": "^1.3.0",
     "history": "^4.7.2",
+    "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-datepicker": "^1.6.0",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
