--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "history": "^4.7.2",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-confirm-alert": "^2.0.6",
     "react-datepicker": "^1.6.0",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0",
+    "react-tabs": "^2.3.0",
+    "react-toastify": "^4.4.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
